JECC - fixed Holidays not working JEVisCore - fixed some pom issues